force-app/main/default/objects/Volunteer_Course__c/Volunteer_Course__c.object-meta.xml
<CustomObject>
    <description>Used for tracking volunteer courses</description>
    <label>Volunteer Course</label>
    <nameField>
        <displayFormat>VCI - {0000}</displayFormat>
        <label>Volunteer Course Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>