force-app/main/default/objects/Volunteer_Course__c/fields/ACF_Course_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ACF_Course_Expiry_Date__c</fullName>
    <formula>Course_Date__c + 1095</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACF Course Expiry Date</label>
    <type>Date</type>
</CustomField>