force-app/main/default/objects/Volunteer_Course__c/fields/ACF_Superceeded__c.field-meta.xml
<CustomField>
    <fullName>ACF_Superceeded__c</fullName>
    <description>Checks if ACF was greater than 3 years ago. If so, ACF refresher course should be used to check volunteer eligibility instead</description>
    <formula>AND(
OR(
 ISPICKVAL(Course__c ,&quot;ACF Safeguarding Children&quot;),
 ISPICKVAL(Course__c ,&quot;ACF Refresh&quot;)
),
Course_Date__c &gt; TODAY()-1095)</formula>
    <inlineHelpText>Checks if ACF was greater than 3 years ago. If so, ACF refresher course should be used to check volunteer eligibility instead</inlineHelpText>
    <label>ACF Superceeded</label>
    <type>Checkbox</type>
</CustomField>