force-app/main/default/objects/Volunteer_Course__c/fields/ACF_Verified__c.field-meta.xml
<CustomField>
    <fullName>ACF_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACF Verified</label>
    <type>Checkbox</type>
</CustomField>