force-app/main/default/objects/Volunteer_Course__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACF Refresh</fullName>
            </value>
            <value>
                <fullName>ACF Safeguarding Children</fullName>
            </value>
            <value>
                <fullName>A day in the life of an employee</fullName>
            </value>
            <value>
                <fullName>Being a fundraising Vollie</fullName>
            </value>
            <value>
                <fullName>Being a Rec Vollie</fullName>
            </value>
            <value>
                <fullName>Camp Leader Induction</fullName>
            </value>
            <value>
                <fullName>Camp Quality Orientation</fullName>
            </value>
            <value>
                <fullName>Child Protection Briefing</fullName>
            </value>
            <value>
                <fullName>Compliance Essentials Work Health and Safety</fullName>
            </value>
            <value>
                <fullName>Culture Tools</fullName>
            </value>
            <value>
                <fullName>Engaging our Volunteers</fullName>
            </value>
            <value>
                <fullName>First Aid and Medical Management</fullName>
            </value>
            <value>
                <fullName>Fundraising 101</fullName>
            </value>
            <value>
                <fullName>LB16: Helping you on your Fundraising Adventure</fullName>
            </value>
            <value>
                <fullName>LB21: Helping you on your Recreation Adventure</fullName>
            </value>
            <value>
                <fullName>LB8: Helping you on your employee adventure</fullName>
            </value>
            <value>
                <fullName>Manual Handling</fullName>
            </value>
            <value>
                <fullName>Medical Volunteer Induction</fullName>
            </value>
            <value>
                <fullName>Meet the Vollie Team</fullName>
            </value>
            <value>
                <fullName>One Team</fullName>
            </value>
            <value>
                <fullName>Oranges</fullName>
            </value>
            <value>
                <fullName>Our Values</fullName>
            </value>
            <value>
                <fullName>Rec Programs 101</fullName>
            </value>
            <value>
                <fullName>Recreation Volunteer Induction</fullName>
            </value>
            <value>
                <fullName>Running Rec Programs</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>The SAFE Files Workplace Bullying</fullName>
            </value>
            <value>
                <fullName>Volunteer Induction - Rec Programs</fullName>
            </value>
            <value>
                <fullName>Volunteering at Camp Quality</fullName>
            </value>
            <value>
                <fullName>What If</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>