force-app/main/default/objects/Volunteer_Course__c/fields/Course_Certificate_URL__c.field-meta.xml
<CustomField>
    <fullName>Course_Certificate_URL__c</fullName>
    <label>Course Certificate URL</label>
    <type>Url</type>
</CustomField>