force-app/main/default/objects/Volunteer_Course__c/fields/Course_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Date__c</fullName>
    <label>Course Completion Date</label>
    <type>Date</type>
</CustomField>