force-app/main/default/objects/Volunteer_Course__c/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Volunteer Courses</relationshipLabel>
    <relationshipName>Volunteer_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>