force-app/main/default/objects/Volunteer_Course__c/fields/VOL_COURSE_ID__c.field-meta.xml
<CustomField>
    <fullName>VOL_COURSE_ID__c</fullName>
    <externalId>true</externalId>
    <label>VOL_COURSE_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>